Delete is working.  Working on displaying adding and subtracting to Total.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </section>
   <section class="row justify-content-center">
-    <table>
+    <table id="listTable">
       <thead>
       <tr>
         <th> Item </th>
@@ -41,8 +41,8 @@
       <tbody id="groceryItems">
       </tbody>
 </table>
-
-
+  </section>
+  <section class="row justify-content-center" id="totalAmount">
   </section>
 </div>
 </div>
