Fixed total repeating and adding.  Need to fix subtracting on delete

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       </tbody>
 </table>
   </section>
-  <section class="row justify-content-center" id="totalAmount">
+  <section class="row justify-content-center">
+    <h3  id="totalAmount"></h3>
   </section>
 </div>
 </div>
