fixed footer issue

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Grocery Time</title>
 </head>
 <body>
-  <div class="container-fluid">
-    <div class="footerFix">
+  <div id="wrap">
+  <div class="container">
   <header class="row justify-content-center">
     <h1> Grocery Time </h1>
   </header>
@@ -29,7 +29,7 @@
       </form>
     </div>
   </section>
-  <section class="row justify-content-center">
+  <section class="row justify-content-center" id="listArea">
     <table id="listTable">
       <thead>
       <tr>
@@ -44,12 +44,16 @@
       </tbody>
 </table>
   </section>
-  <section class="row justify-content-center">
+  <section class="row justify-content-center" id="totalSection">
     <h3  id="totalAmount"> </h3>
   </section>
 </div>
 </div>
-<footer>
+<footer class="row no-gutters align-items-end" id="footer">
+  <img class="col-3 img-fluid" src="assets/veggies.jpg">
+    <img class="col-3 img-fluid" src="assets/veggies.jpg">
+      <img class="col-3 img-fluid" src="assets/veggies.jpg">
+            <img class="col-3 img-fluid" src="assets/veggies.jpg">
 </footer>
 
 
