Updated placeholder for clarity and updated file structure

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="row justify-content-center">
       <form id="inputForm">
         <input type="input" id="groceryInput" class="col-xs-4" placeholder="Grocery Item">
-        <input type="number" id="amountInput" class="col-xs-4" placeholder="Amount">
+        <input type="number" id="amountInput" class="col-xs-4" placeholder="Amount of Item Needed">
         <input type="number" id="priceInput" class="col-xs-4" placeholder="Price Per Unit">
         <button type="button" id="add"> Add to List </button>
       </form>
@@ -50,10 +50,10 @@
 </div>
 </div>
 <footer class="row no-gutters align-items-end" id="footer">
-  <img class="col-3 img-fluid" src="assets/veggies.jpg">
-    <img class="col-3 img-fluid" src="assets/veggies.jpg">
-      <img class="col-3 img-fluid" src="assets/veggies.jpg">
-            <img class="col-3 img-fluid" src="assets/veggies.jpg">
+  <img class="col-3 img-fluid" src="./images/veggies.jpg">
+    <img class="col-3 img-fluid" src="./images/veggies.jpg">
+      <img class="col-3 img-fluid" src="./images/veggies.jpg">
+            <img class="col-3 img-fluid" src="./images/veggies.jpg">
 </footer>
 
 
