--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="row justify-content-center">
       <form id="inputForm">
         <input type="input" id="groceryInput" class="col-xs-4" placeholder="Grocery Item">
-        <input type="number" id="amountInput" class="col-xs-4" placeholder="Amount of Item Needed">
+        <input type="number" id="amountInput" class="col-xs-4" placeholder="Number">
         <input type="number" id="priceInput" class="col-xs-4" placeholder="Price Per Unit">
         <button type="button" id="add"> Add to List </button>
       </form>
